--- a/Views/MainViewController/Base.lproj/MainViewController.storyboard
+++ b/Views/MainViewController/Base.lproj/MainViewController.storyboard
@@ -128,6 +128,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
+                                            <outlet property="avatarImage" destination="OLY-w3-1Nc" id="7cJ-Yt-sAo"/>
                                             <outlet property="cardView" destination="RkT-oD-0UV" id="eBP-Ec-4S9"/>
                                             <outlet property="nameLabel" destination="UDI-1e-Y3J" id="2WU-NO-H32"/>
                                             <outlet property="preFireLabel" destination="h0V-qu-6qb" id="qBY-SE-1Wa"/>
@@ -297,7 +298,7 @@
         <image name="settings" width="28" height="24"/>
         <image name="trash" width="26" height="28"/>
         <namedColor name="PreRed">
-            <color red="0.89803921568627454" green="0.011764705882352941" blue="0.019607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.74901960784313726" green="0.086274509803921567" blue="0.14509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="PrimaryColor">
             <color red="0.75686274509803919" green="0.76078431372549016" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
